RESOLVED FIXED195054
[iOS] Regression(PSON) Scroll position is no longer restored when navigating back to reddit.com
https://bugs.webkit.org/show_bug.cgi?id=195054
Summary [iOS] Regression(PSON) Scroll position is no longer restored when navigating ...
Chris Dumez
Reported 2019-02-26 10:20:20 PST
Scroll position is no longer restored when navigating back to reddit.com on iOS when PSON is enabled.
Attachments
Patch (12.23 KB, patch)
2019-02-26 10:26 PST, Chris Dumez
no flags
Patch (12.29 KB, patch)
2019-02-26 11:56 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-02-26 10:20:40 PST
Chris Dumez
Comment 2 2019-02-26 10:26:42 PST
Geoffrey Garen
Comment 3 2019-02-26 10:53:18 PST
Comment on attachment 362991 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362991&action=review r=me Can you file a follow-up Radar about the UIProcess vs WebProcess scroll position mismatch on session restoration? > Source/WebKit/ChangeLog:14 > + and would there get reloaded abd finish loading *after* the load event. => would then get reloaded and > Source/WebCore/page/MemoryRelease.cpp:88 > + MemoryCache::singleton().pruneLiveResourcesToSize(0, /*shouldDestroyDecodedDataForAllLiveResources*/ true); I'd prefer seeing "auto shouldDestroyDecodedDataForAllLiveResources = true; pruneLiveResourcesToSize(0, shouldDestroyDecodedDataForAllLiveResources);".
Chris Dumez
Comment 4 2019-02-26 11:56:17 PST
WebKit Commit Bot
Comment 5 2019-02-26 12:34:42 PST
Comment on attachment 363000 [details] Patch Clearing flags on attachment: 363000 Committed r242099: <https://trac.webkit.org/changeset/242099>
WebKit Commit Bot
Comment 6 2019-02-26 12:34:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.