Source/WebCore/page/MemoryRelease.h
@@ -30,8 +30,9 @@
 namespace WebCore {
 
 enum class MaintainPageCache : bool { No, Yes };
+enum class MaintainMemoryCache : bool { No, Yes };
 
-WEBCORE_EXPORT void releaseMemory(Critical, Synchronous, MaintainPageCache = MaintainPageCache::No);
+WEBCORE_EXPORT void releaseMemory(Critical, Synchronous, MaintainPageCache = MaintainPageCache::No, MaintainMemoryCache = MaintainMemoryCache::No);
 void platformReleaseMemory(Critical);
 void jettisonExpensiveObjectsOnTopLevelNavigation();
 WEBCORE_EXPORT void registerMemoryReleaseNotifyCallbacks();
