Source/WebKit/WebProcess/WebProcess.h
@@ -267,6 +267,7 @@ private:
 
     void platformTerminate();
 
+    void setHasSuspendedPageProxy(bool);
     void setIsInProcessCache(bool);
     void markIsNoLongerPrewarmed();
 
@@ -478,6 +479,7 @@ private:
 #if PLATFORM(WAYLAND)
     std::unique_ptr<WaylandCompositorDisplay> m_waylandCompositorDisplay;
 #endif
+    bool m_hasSuspendedPageProxy { false };
     bool m_isSuspending { false };
 };
 
